--- a/client/package.json
+++ b/client/package.json
@@ -11,27 +11,26 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
-    "@tailwindcss/vite": "^4.0.13",
     "axios": "^1.9.0",
-    "daisyui": "^5.0.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "daisyui": "^5.0.43",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.3.0",
-    "react-router-dom": "^7.3.0",
-    "tailwindcss": "^4.0.13"
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.35",
+    "vite": "^5.1.6"
   }
 }
